launchtemplatep.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Template to Create an EC2 instance in a VPC

Resources:
  LaunchTemplatep:
    Type: 'AWS::EC2::LaunchTemplate'
    Properties:
      LaunchTemplateName: !Sub '${AWS::StackName}-launch-template-for-auto-scaling'
      LaunchTemplateData:
        SecurityGroupIds:
          - !GetAtt HTTPSecGroup.GroupId
          - !GetAtt SSHSecGroup.GroupId
        ImageId: ami-0c1bc246476a5572b
        InstanceType: t2.micro
        KeyName: MyDemoKey1
        UserData:
          Fn::Base64: 
            !Sub |
              #!/bin/bash
              yum update -y
              amazon-linux-extras install nginx1 -y
              systemctl start nginx
              systemctl enable nginx
              echo whazzaaaaaa!!!! from $(hostname -f) > /usr/share/nginx/html/index.html
  inlamningASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplatep
        Version: !GetAtt LaunchTemplatep.LatestVersionNumber
      MaxSize: '3'
      MinSize: '1'
      DesiredCapacity: '1'
      VPCZoneIdentifier:   
        - subnet-03b2b746e62f3345d
        - subnet-0ff59f869374c89ac
        - subnet-0b3372cb27bb57b45
      MetricsCollection: 
        - Granularity: "1Minute"
          Metrics: 
            - "GroupMinSize"
            - "GroupMaxSize"
      # Tags:
      #   - Key: Environment
      #     Value: Production
      #     PropagateAtLaunch: "true"
      #   - Key: Purpose
      #     Value: WebServerGroup
      #     PropagateAtLaunch: "false"
          
  HTTPSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG to allow HTTP access via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  SSHSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG to allow SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
